@@ -15,6 +15,7 @@ CHANGELOG Roundcube Webmail
 - Enigma: Fix keys import from inside of an encrypted message (#5285)
 - Enigma: Fix malformed signed messages with force_7bit=true (#5292)
 - Enigma: Add possibility to configure gpg binary location (enigma_pgp_binary)
+- Enigma: Add possibility to export private keys (#5321)
 - Fix searching by email address in contacts with multiple addresses (#5291)
 - Fix handling of --delete argument in moduserprefs.sh script (#5296)
 - Workaround PHP issue by calling closelog() on script shutdown when using log_driver=syslog (#5289)
